--- a/hello 2.html
+++ b/hello 2.html
@@ -2,9 +2,16 @@
 <html>
     <head>
         <title>second page </title>
+        <style>
+            [
+                
+            ]
+            
+        </style>
+        <link rel="stylesheet" href="">
     </head>
     <body>
-        <h1>this my second page </h1>
+        <h1 id="uh" class="">this my second page </h1>
         <ol>
             <li>100k Coding Challenge</li>
             <li>web designing challenge</li>
@@ -23,7 +30,7 @@
                 <li>knowledge</li>
 
                 <h1>table</h1>
-                <table border="1px"> 
+                <table border="1px" > 
                     <thead>
                         <tr>
                             <th>no</th>
@@ -36,18 +43,6 @@
                             <td>1</td>
                             <td>restaurant</td>
                             <td>traditional</td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>swiggy</td>
-                            <td>start up</td>
-
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>swiggy</td>
-                            <td>start up</td>
-
                         </tr>
                         <tr>
                             <td>2</td>
