--- a/hello.html
+++ b/hello.html
@@ -110,7 +110,7 @@
             <td></td>
             <td></td>
             <td></td>
-            <td></td>
+            <td rowspan="15"></td>
         </tr>
         <tr>
             <td>9:00am</td>
@@ -208,6 +208,5 @@
         </tr>
 
     </table>
-    <h1>hi</h1>
 </body>
 </html>
