--- a/hello.html
+++ b/hello.html
@@ -246,8 +246,34 @@
             <td>100%</td>
             <td>100%</td>
             <td>17.6</td>
+            <td colspan="4"></td>
             <td>17.6</td>
             <td>18</td>
+        </tr>
+        <tr>
+            <td>80549062</td>
+            <td>mary</td>
+            <td>10%</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>60.8</td>
+            <td>100%</td>
+            <td>100%</td>
+            <td>50%</td>
+            <td>16.5</td>
+            <td>16.5</td>
+            <td>17</td>
+        </tr>
+        <tr>
+            <td>80549063</td>
+            <td>claire</td>
+            <td colspan="4"></td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>50%</td>
+            <td>10.0</td>
+            <td>10.0</td>
+            <td>10</td>
         </tr>
      </table>
 </body>
