--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>debug media</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-        
-      <header>
-        <h1>Heading</h1>
-      </header>
-
-      <div>hjjbgvjhgh</div>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
+</body>
 </html>
