--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+<!doctype html>
+<html>
+    <head>
+        <title>Debug media</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+       <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima laudantium, eligendi optio neque sit delectus, quos consectetur ratione sint cum libero voluptas a, veritatis incidunt at possimus deserunt iure. Sunt!</p>
+       </div>
+
+    </body>
 </html>
