--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Debug media</title>
-        <link rel="stylesheet" href="style.css">
-    </head>
-    <body>
-       <div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima laudantium, eligendi optio neque sit delectus, quos consectetur ratione sint cum libero voluptas a, veritatis incidunt at possimus deserunt iure. Sunt!</p>
-       </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>variables</title>
+     
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+     <h1 class="header-1">Heading 1</h1>
+     <h1 class="header-2">Heading 2</h1>
+     <h1 class="header-3">Heading 3</h1>
+     <h1 class="header-4">Heading 4</h1>
+     <h1 class="header-5">Heading 5</h1>
 
-    </body>
+
+</body>
 </html>
