--- a/index.html
+++ b/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>variables</title>
+    <title>box sizing</title>
      
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-     <h1 class="header-1">Heading 1</h1>
-     <h1 class="header-2">Heading 2</h1>
-     <h1 class="header-3">Heading 3</h1>
-     <h1 class="header-4">Heading 4</h1>
-     <h1 class="header-5">Heading 5</h1>
-
-
+    <div>header </div>
+    <div>div 2</div>
+    <div>div 3</div>
+       
 </body>
 </html>
