--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>debug media</title>
+        <title>Debug Media</title>
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
@@ -9,7 +9,8 @@
       <header>
         <h1>Heading</h1>
       </header>
+      
 
-      <div>hjjbgvjhgh</div>
+      <div>sssssss</div>
     </body>
 </html>
