--- a/index.html
+++ b/index.html
@@ -3,14 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>box sizing</title>
+    <title>debug media </title>
      
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>header </div>
-    <div>div 2</div>
-    <div>div 3</div>
-       
+
+    <div class="container">
+        <div class="one">
+            <h1>section 1</h1>
+        </div>
+        <div class="two">
+            <h1>section 2</h1>
+        </div>
+        <div class="three">
+            <h1>section 3</h1>
+        </div>
+
+
+
+    </div>
+
 </body>
 </html>
