--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS animation</title>
+    <title>CSS Media Queries</title>
      
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <div></div>
-
+    <div class="section-1"></div>
 </body>
 </html>
