--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="section-1"></div>
+    <div class="section-1">
+        <h1>Welcome to debug media </h1>
+    </div>
 </body>
 </html>
