--- a/index.html
+++ b/index.html
@@ -8,8 +8,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="section-1">
-        <h1>Welcome to debug media </h1>
+    <div class="container">
+        <div class="section">
+            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
+            <img src="/assets/download.jpeg" alt="">
+            <img src="/assets/images.jpeg" alt="">
+        </div>
+        <div class="section">
+            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
+            <img src="/assets/download.jpeg" alt="">
+            <img src="/assets/images.jpeg" alt="">
+        </div>
+        <div class="section">
+            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
+            <img src="/assets/download.jpeg" alt="">
+            <img src="/assets/images.jpeg" alt="">
+        </div>
+        <div class="section">
+            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
+            <img src="/assets/download.jpeg" alt="">
+            <img src="/assets/images.jpeg" alt="">
+        </div>
     </div>
+   
 </body>
 </html>
