--- a/index.html
+++ b/index.html
@@ -3,33 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS Media Queries</title>
-     
+    <title>Advanced CSS</title>
+
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="section">
-            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
-            <img src="/assets/download.jpeg" alt="">
-            <img src="/assets/images.jpeg" alt="">
-        </div>
-        <div class="section">
-            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
-            <img src="/assets/download.jpeg" alt="">
-            <img src="/assets/images.jpeg" alt="">
-        </div>
-        <div class="section">
-            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
-            <img src="/assets/download.jpeg" alt="">
-            <img src="/assets/images.jpeg" alt="">
-        </div>
-        <div class="section">
-            <img src="/assets/8e1267b4050012fd8f90cb374fb67d2d.jpg" alt="">
-            <img src="/assets/download.jpeg" alt="">
-            <img src="/assets/images.jpeg" alt="">
-        </div>
-    </div>
-   
+    <h1 class="section ">Hello World! 1</h1>
+    <h1 class="section ">Hello World! 2</h1>
+    <h1 class="section-1">Hello World! 3</h1>
+    <h1 class="section ">Hello World! 4</h1>
+    <h1 class="section-1">Hello World! 3</h1>
 </body>
 </html>
