--- a/index.html
+++ b/index.html
@@ -8,10 +8,25 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="section ">Hello World! 1</h1>
-    <h1 class="section ">Hello World! 2</h1>
-    <h1 class="section-1">Hello World! 3</h1>
-    <h1 class="section ">Hello World! 4</h1>
-    <h1 class="section-1">Hello World! 3</h1>
+    <div id="container-id">
+        <h1 class="inside-one">hello <span>world 1</span></h1>
+    </div>
+
+    <div class="grid-container">
+        <h1>hello <span>world</span></h1>
+    </div>
+
+    <div class="container-one">
+        <h1 class="inside-two">hello <span>world 2</span></h1>
+    </div>
+
+   
+    <div class="container">
+        <h1 class="inside-three">hello <span>world 3 </span></h1>
+    </div>
+    <div class="container">
+        <h1 class="inside-four">hello <span>world 4</span></h1>
+    </div>
+
 </body>
 </html>
