--- a/index.html
+++ b/index.html
@@ -3,30 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Advanced CSS</title>
-
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="container-id">
-        <h1 class="inside-one">hello <span>world 1</span></h1>
+    <div class="section-1">
+        <p1>Victoria's Journal</p1>
+        <p2>So fresh and so clean </p2>
     </div>
+    <div class="section-2">
+        <p> <span>04/09/08:</span> spatulas</p>
+        <img src="assets/71ARSWzCZBL.jpg" alt="spatulas" height="200px">
+        <p>Yesterday I went to be store and got some much-needed spatulas!(What better way to say I love myself a spatula?) </p>
+        
+    </div>
+    <div class="section-3">
+        <p> <span>04/08/08:</span> cookie monster cupcakes</p>
+        <img src="assets/images (1).jpeg" alt="monstr cookie">
 
-    <div class="grid-container">
-        <h1>hello <span>world</span></h1>
     </div>
-
-    <div class="container-one">
-        <h1 class="inside-two">hello <span>world 2</span></h1>
-    </div>
-
-   
-    <div class="container">
-        <h1 class="inside-three">hello <span>world 3 </span></h1>
-    </div>
-    <div class="container">
-        <h1 class="inside-four">hello <span>world 4</span></h1>
-    </div>
-
 </body>
 </html>
+
