--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
             </div>
             <div class="heading-3">
                 <h1>SECTION 3</h1>
-            </div>
- 
-    
-</section>
-
-<footer>
-
-</footer>
-    
+            </div>   
+    </section>
+    <section class="content-sec-1">
+        <div>
+            <h1 class="heading-4">PAGE CONTENT</h1>
+        </div>
+        <div>
+            <h1 class="heading-5">SIDE BAR </h1>
+        </div>
+    </section>  
 </body>
 
 </html>
