--- a/index.html
+++ b/index.html
@@ -35,13 +35,33 @@
             </div>   
     </section>
     <section class="content-sec-1">
-        <div>
-            <h1 class="heading-4">PAGE CONTENT</h1>
+        <div class="head-4-div">
+            <h1>PAGE CONTENT</h1>
         </div>
-        <div>
-            <h1 class="heading-5">SIDE BAR </h1>
+        <div class="head-5-div">
+            <h1>SIDE BAR </h1>
         </div>
-    </section>  
+    </section>
+
+    <footer class="footer-1">
+        <div>
+            <h1>PAGE FOOTER</h1>
+        </div>
+    </footer>  
+
+    <section class="navbar-2">
+        <div class="test">
+            <h1>CS</h1>
+        </div>
+        <div class="div-logo">
+            <h1>Open Computer Science</h1>
+        </div>
+        <div class="div-logo-1">
+            <h1>About</h1>
+        </div>
+    </section>
+    
+    
 </body>
 
 </html>
