--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         </div>
     </footer>  
 
+
+
     <section class="navbar-2">
         <div class="test">
             <h1>CS</h1>
@@ -60,6 +62,21 @@
             <h1>About</h1>
         </div>
     </section>
+    <section class="content-1">
+        <div class="Courceware">
+            <h1>CEMC Courceware > </h1>
+        </div>
+        <div class="home-page">
+            <h1>Home</h1>
+        </div>
+    </section>
+    <section class="content-main">
+        <div></div>
+        <div class="cource-content">
+            <h1>Cources</h1>
+        </div>
+    </section>
+
     
     
 </body>
