--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
                 </div>
                 <div class="cs-1">
-                    <img src="assets/images.png" alt="image">
+                    <img src="assets/" alt="image">
                     <div>
                         <h3>Web basics</h3>
 
@@ -113,6 +113,21 @@
                     </div>
 
                 </div>
+                <div class="cs-1">
+                    <img src="assets/images.png" alt="image">
+                    <div>
+                        <h3>Web programming</h3>
+
+                        <p>Web programming presents the use of basic programming concepts as applied to web pages,using
+                            the language javascript.the target audience for this course is those who have mastered the
+                            basic of programming (in any programming language)and the basics of HTML and CSS. </p>
+                    </div>
+
+                </div>
+
+
+
+
             </div>
     </section>
 
