--- a/index.html
+++ b/index.html
@@ -9,131 +9,18 @@
 </head>
 
 <body>
-    <nav class="navbar">
-
-        <div class="logo-div">
-            <h1>LOGO</h1>
-        </div>
-        <div class="head-div">
-            <h1>WEBSITE HEADING</h1>
-        </div>
-    </nav>
-    <section class="menu-section">
-
-        <div class="menu-div">
-            <h1>MENU</h1>
-        </div>
-    </section>
-    <section class="content-sec">
-
-        <div class="heading-1">
-            <h1>SECTION 1</h1>
-        </div>
-        <div class="heading-2">
-            <h1>SECTION 2</h1>
-        </div>
-        <div class="heading-3">
-            <h1>SECTION 3</h1>
-        </div>
-    </section>
-    <section class="content-sec-1">
-        <div class="head-4-div">
-            <h1>PAGE CONTENT</h1>
-        </div>
-        <div class="head-5-div">
-            <h1>SIDE BAR </h1>
-        </div>
-    </section>
-
-    <footer class="footer-1">
-        <div>
-            <h1>PAGE FOOTER</h1>
-        </div>
-    </footer>
-
-
-
-    <section class="navbar-2">
-        <div class="test">
-            <h1>CS</h1>
-        </div>
-        <div class="div-logo">
-            <h1>Open Computer Science</h1>
-        </div>
-        <div class="div-logo-1">
-            <h1>About</h1>
-        </div>
-    </section>
-    <section class="content-1">
-        <div class="Courceware">
-            <h1>CEMC Courceware > </h1>
-        </div>
-        <div class="home-page">
-            <h1>Home</h1>
-        </div>
-    </section>
-    <section class="content-main">
-        <div class="cource-content">
-            <h1>Cources</h1>
-
-            <div class="cource-content-2">
-                <div class="cs-1">
-                    <img src="assets/images (2).jpeg" alt="image">
-                    <div>
-                        <h3>python from scratch</h3>
-
-                        <p>python from scratch is a gentle indroduction to programming,designed with beginner in mind.No
-                            previous background i assumed.Each programming concept is first tought without reference to
-                            a specific programming language.Hands-on practice,using the programming language
-                            Python,helps to reinforce the concepts</p>
-                    </div>
-
-                </div>
-
-                <div class="cs-1">
-                    <img src="assets/download (1).jpeg" alt="image">
-                    <div>
-                        <h3>Language indepentent lessons</h3>
-
-                        <p>This "cource" is a collection of vidoes teaching programming concepts in a
-                            language-indepentent manner(Also used in Python from scartch).they can serve as
-                            supplimentary materials for students of just about any programming language,or as a basic
-                            for review</p>
-                    </div>
-
-                </div>
-                <div class="cs-1">
-                    <img src="assets/" alt="image">
-                    <div>
-                        <h3>Web basics</h3>
-
-                        <p>Web basic indroduces main ideas behind the specification of a webpage in HTML5 and
-                            CSS3,assuming no previous background.Explanations are interspersed with exercises and ideas
-                            for further practice</p>
-                    </div>
-
-                </div>
-                <div class="cs-1">
-                    <img src="assets/images.png" alt="image">
-                    <div>
-                        <h3>Web programming</h3>
-
-                        <p>Web programming presents the use of basic programming concepts as applied to web pages,using
-                            the language javascript.the target audience for this course is those who have mastered the
-                            basic of programming (in any programming language)and the basics of HTML and CSS. </p>
-                    </div>
-
-                </div>
-
-
-
-
-            </div>
-    </section>
-
-
-
-
+    <div class="parent">
+        <h1></h1>
+    </div>
+    <div class="child">
+        <h1></h1>
+    </div>
+    <div class="child-2">
+        <h1></h1>
+    </div>
+    <div class="child-3">
+        <h1></h1>
+    </div>
 </body>
 
 </html>
