--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
 
 <body>
     <div class="parent">
-        <h1></h1>
+        <h1>red</h1>
     </div>
     <div class="child">
-        <h1></h1>
+        <h1>lavender</h1>
     </div>
     <div class="child-2">
-        <h1></h1>
+        <h1>yellow</h1>
     </div>
     <div class="child-3">
-        <h1></h1>
+        <h1>green</h1>
+    </div>
+    <div class="child-4">
+        <h1>blue</h1>
     </div>
 </body>
 
