--- a/index.html
+++ b/index.html
@@ -9,20 +9,35 @@
 </head>
 
 <body>
+    <div class="navbar">
+        <h1>playing around with the css box model</h1>
+    </div>
     <div class="parent">
-        <h1>red</h1>
+        <h1>box 1</h1>
     </div>
     <div class="child">
-        <h1>lavender</h1>
+        <h1>box 2</h1>
     </div>
     <div class="child-2">
-        <h1>yellow</h1>
+        <h1>box 3</h1>
     </div>
     <div class="child-3">
-        <h1>green</h1>
+        <h1>box 4</h1>
     </div>
     <div class="child-4">
-        <h1>blue</h1>
+        <h1>box 5</h1>
+    </div>
+    <div class="child-5">
+        <h1>box 6</h1>
+    </div>
+    <div class="child-6">
+        <h1>box 7</h1>
+    </div>
+    <div class="child-7">
+        <h1>box 8</h1>
+    </div>
+    <div class="child-8">
+        <h1>box 9</h1>
     </div>
 </body>
 
