--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <div class="child-8">
         <h1>box 9</h1>
     </div>
+    <div class="footter">
+        <h1>box 10</h1>
+    </div>
 </body>
 
 </html>
