--- a/index.html
+++ b/index.html
@@ -9,39 +9,17 @@
 </head>
 
 <body>
+
     <div class="navbar">
-        <h1>playing around with the css box model</h1>
+        <h1>logo</h1>
+        <div class="menu-bar">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+
     </div>
-    <div class="parent">
-        <h1>box 1</h1>
-    </div>
-    <div class="child">
-        <h1>box 2</h1>
-    </div>
-    <div class="child-2">
-        <h1>box 3</h1>
-    </div>
-    <div class="child-3">
-        <h1>box 4</h1>
-    </div>
-    <div class="child-4">
-        <h1>box 5</h1>
-    </div>
-    <div class="child-5">
-        <h1>box 6</h1>
-    </div>
-    <div class="child-6">
-        <h1>box 7</h1>
-    </div>
-    <div class="child-7">
-        <h1>box 8</h1>
-    </div>
-    <div class="child-8">
-        <h1>box 9</h1>
-    </div>
-    <div class="footter">
-        <h1>box 10</h1>
-    </div>
+
 </body>
 
 </html>
